# janelle

./: LICENSE  README.md  config.py  lint.sh  mypy.ini  pyproject.toml  run.sh
bot/: __init__.py  bot.py
modules/: emotions.py  iamroles.py  moderation.py  rules.py
utils/: converters.py
